configure swagger test for endpoints and setup cors
